[package]
name = "area-attackers"
version = "0.1.0"
edition = "2021"
authors = ["Chrstn"]
description = "Discount copy of Space Invaders"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
rand = "0.8.4"